# advent-of-code-python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
advent_of_code/: day1.py
tests/: test_day1.py
